# parakeet

./: .gitignore  TODO.md  pyproject.toml
analysis/: demo.ipynb
parakeet/backend/pandas/: dataset.py
parakeet/backend/pandas/aggregations/: count.py  numeric1d.py
parakeet/backend/pandas/ops/: op.py
parakeet/backend/pandas/ops/aggregations/: numeric1d.py
parakeet/backend/pandas/stats/: frequency.py  stratification.py
parakeet/core/: dataset.py  engine.py  order.py
parakeet/core/ops/: agg.py  groupby.py  op.py
parakeet/core/ops/aggregations/: __init__.py  count.py  numeric1d.py
parakeet/stats/: cube.py  frequency.py  stratification.py  test_cube.py
parakeet/stats/test/: test_frequency.py
