[tool.poetry]
name = "parakeet"
version = "0.1.0"
description = "Data analysis tooling."
authors = ["Antonio Pedro Vieira <aps.vieira95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
flake8 = "^6.1.0"
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
